# moneylens-converter-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  options.rs  parsers.rs  payload.rs
src/parsers/: earn.rs  save.rs  spend.rs  utils.rs
src/payload/: builder.rs  types.rs
tests/: earn_parser_test.rs  earn_parser_tests.rs  parser_util_tests.rs  save_parser_tests.rs  spend_parser_tests.rs
tests/data/: savings_example.ods  spend_earn_transactions_example.ods
