[package]
name = "moneylens-converter-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moneylens-converter-rs"
path = "src/main.rs"

[lib]
name = "moneylens_converter_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spreadsheet-ods = "1.0.1"
